{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 38,
  "lineage": "0067c6c3-6be2-e706-ee4b-26d5a1e9467a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015a999dafc096fd0",
            "arn": "arn:aws:ec2:us-east-1:113436413897:elastic-ip/eipalloc-015a999dafc096fd0",
            "association_id": "eipassoc-0173126213e73f7ee",
            "domain": "vpc",
            "id": "eipalloc-015a999dafc096fd0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-062f8ae65a5a269f5",
            "private_dns": "ip-10-0-1-241.ec2.internal",
            "private_ip": "10.0.1.241",
            "public_dns": "ec2-54-197-106-67.compute-1.amazonaws.com",
            "public_ip": "54.197.106.67",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c895f1e4e471df71",
            "arn": "arn:aws:ec2:us-east-1:113436413897:elastic-ip/eipalloc-0c895f1e4e471df71",
            "association_id": "eipassoc-0873f6c6752f21547",
            "domain": "vpc",
            "id": "eipalloc-0c895f1e4e471df71",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05884dbc412709850",
            "private_dns": "ip-10-0-3-179.ec2.internal",
            "private_ip": "10.0.3.179",
            "public_dns": "ec2-52-6-51-32.compute-1.amazonaws.com",
            "public_ip": "52.6.51.32",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sosoco_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113436413897:internet-gateway/igw-00929e9e427581c8e",
            "id": "igw-00929e9e427581c8e",
            "owner_id": "113436413897",
            "region": "us-east-1",
            "tags": {
              "Name": "sosoco_igw"
            },
            "tags_all": {
              "Name": "sosoco_igw"
            },
            "vpc_id": "vpc-0795d708e5236a230"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.sosoco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "sosoco_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:113436413897:loadbalancer/app/sosoco-main-alb/19b188c998966de8",
            "arn_suffix": "app/sosoco-main-alb/19b188c998966de8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "sosoco-main-alb-627561706.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:113436413897:loadbalancer/app/sosoco-main-alb/19b188c998966de8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sosoco-main-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-094858b6081eca4be"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-069db6cc8598225b4"
              },
              {
                "subnet_id": "subnet-0837a203e708a459f"
              }
            ],
            "subnets": [
              "subnet-069db6cc8598225b4",
              "subnet-0837a203e708a459f"
            ],
            "tags": {
              "Name": "sosoco_alb"
            },
            "tags_all": {
              "Name": "sosoco_alb"
            },
            "vpc_id": "vpc-0795d708e5236a230",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:113436413897:loadbalancer/app/sosoco-main-alb/19b188c998966de8"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.sosoco_web_server1",
            "aws_subnet.sosoco_web_server2",
            "aws_vpc.sosoco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sosoco_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:113436413897:listener/app/sosoco-main-alb/19b188c998966de8/cd512a5a9119c50f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:113436413897:targetgroup/app-alb-tg/980c48c93598003f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:113436413897:listener/app/sosoco-main-alb/19b188c998966de8/cd512a5a9119c50f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:113436413897:loadbalancer/app/sosoco-main-alb/19b188c998966de8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:113436413897:listener/app/sosoco-main-alb/19b188c998966de8/cd512a5a9119c50f"
          },
          "dependencies": [
            "aws_lb.sosoco_alb",
            "aws_lb_target_group.sosoco_alb_target_group",
            "aws_security_group.alb_sg",
            "aws_subnet.sosoco_web_server1",
            "aws_subnet.sosoco_web_server2",
            "aws_vpc.sosoco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sosoco_alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:113436413897:targetgroup/app-alb-tg/980c48c93598003f",
            "arn_suffix": "targetgroup/app-alb-tg/980c48c93598003f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:113436413897:targetgroup/app-alb-tg/980c48c93598003f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:113436413897:loadbalancer/app/sosoco-main-alb/19b188c998966de8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0795d708e5236a230"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:113436413897:targetgroup/app-alb-tg/980c48c93598003f"
          },
          "dependencies": [
            "aws_vpc.sosoco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sosoco_nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015a999dafc096fd0",
            "association_id": "eipassoc-0173126213e73f7ee",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0fc8b2bd2adce6f71",
            "network_interface_id": "eni-062f8ae65a5a269f5",
            "private_ip": "10.0.1.241",
            "public_ip": "54.197.106.67",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-069db6cc8598225b4",
            "vpc_id": "vpc-0795d708e5236a230"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "113436413897",
            "id": "nat-0fc8b2bd2adce6f71",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip1",
            "aws_subnet.sosoco_web_server1",
            "aws_vpc.sosoco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sosoco_nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c895f1e4e471df71",
            "association_id": "eipassoc-0873f6c6752f21547",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0db5e0a8d5633ce89",
            "network_interface_id": "eni-05884dbc412709850",
            "private_ip": "10.0.3.179",
            "public_ip": "52.6.51.32",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0837a203e708a459f",
            "vpc_id": "vpc-0795d708e5236a230"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "113436413897",
            "id": "nat-0db5e0a8d5633ce89",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip2",
            "aws_subnet.sosoco_web_server2",
            "aws_vpc.sosoco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sosoco_private_rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113436413897:route-table/rtb-050542ce4cbcffec7",
            "id": "rtb-050542ce4cbcffec7",
            "owner_id": "113436413897",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fc8b2bd2adce6f71",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sosoco_private_rt1"
            },
            "tags_all": {
              "Name": "sosoco_private_rt1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0795d708e5236a230"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "113436413897",
            "id": "rtb-050542ce4cbcffec7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip1",
            "aws_nat_gateway.sosoco_nat1",
            "aws_subnet.sosoco_web_server1",
            "aws_vpc.sosoco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sosoco_private_rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113436413897:route-table/rtb-0c9215140e3b3fada",
            "id": "rtb-0c9215140e3b3fada",
            "owner_id": "113436413897",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0db5e0a8d5633ce89",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sosoco_private_rt2"
            },
            "tags_all": {
              "Name": "sosoco_private_rt2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0795d708e5236a230"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "113436413897",
            "id": "rtb-0c9215140e3b3fada",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip2",
            "aws_nat_gateway.sosoco_nat2",
            "aws_subnet.sosoco_web_server2",
            "aws_vpc.sosoco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sosoco_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113436413897:route-table/rtb-05b3f65bbc7427891",
            "id": "rtb-05b3f65bbc7427891",
            "owner_id": "113436413897",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00929e9e427581c8e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sosoco_public_rt"
            },
            "tags_all": {
              "Name": "sosoco_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0795d708e5236a230"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "113436413897",
            "id": "rtb-05b3f65bbc7427891",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.sosoco_igw",
            "aws_vpc.sosoco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet1_rt_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec9d95cfe6f3c386",
            "region": "us-east-1",
            "route_table_id": "rtb-050542ce4cbcffec7",
            "subnet_id": "subnet-0cb692e531746cd66"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "113436413897",
            "id": "rtbassoc-0ec9d95cfe6f3c386",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip1",
            "aws_nat_gateway.sosoco_nat1",
            "aws_route_table.sosoco_private_rt1",
            "aws_subnet.sosoco_app_server1",
            "aws_subnet.sosoco_web_server1",
            "aws_vpc.sosoco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet2_rt_private_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ac8633fe1aafbb3",
            "region": "us-east-1",
            "route_table_id": "rtb-0c9215140e3b3fada",
            "subnet_id": "subnet-06cec501e8c041f6f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "113436413897",
            "id": "rtbassoc-08ac8633fe1aafbb3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip2",
            "aws_nat_gateway.sosoco_nat2",
            "aws_route_table.sosoco_private_rt2",
            "aws_subnet.sosoco_app_server2",
            "aws_subnet.sosoco_web_server2",
            "aws_vpc.sosoco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet1_rt_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa6ed4354dda5b0c",
            "region": "us-east-1",
            "route_table_id": "rtb-05b3f65bbc7427891",
            "subnet_id": "subnet-069db6cc8598225b4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "113436413897",
            "id": "rtbassoc-0fa6ed4354dda5b0c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.sosoco_igw",
            "aws_route_table.sosoco_public_rt",
            "aws_subnet.sosoco_web_server1",
            "aws_vpc.sosoco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet2_rt_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0e6418be29a62eb",
            "region": "us-east-1",
            "route_table_id": "rtb-05b3f65bbc7427891",
            "subnet_id": "subnet-0837a203e708a459f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "113436413897",
            "id": "rtbassoc-0d0e6418be29a62eb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.sosoco_igw",
            "aws_route_table.sosoco_public_rt",
            "aws_subnet.sosoco_web_server2",
            "aws_vpc.sosoco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113436413897:security-group/sg-094858b6081eca4be",
            "description": "sg that will manage inbound traffic and all outbound traffic at the level of the ALB",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06cfb58fbfbab8e79"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-094858b6081eca4be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "113436413897",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_sg"
            },
            "tags_all": {
              "Name": "alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0795d708e5236a230"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "113436413897",
            "id": "sg-094858b6081eca4be",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.sosoco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113436413897:security-group/sg-06cfb58fbfbab8e79",
            "description": "sg that will manage inbound traffic and all outbound traffic at the level of the instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-094858b6081eca4be"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-06cfb58fbfbab8e79",
            "ingress": [
              {
                "cidr_blocks": [
                  "75.159.149.84/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-094858b6081eca4be"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2_sg",
            "name_prefix": "",
            "owner_id": "113436413897",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_sg"
            },
            "tags_all": {
              "Name": "ec2_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0795d708e5236a230"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "113436413897",
            "id": "sg-06cfb58fbfbab8e79",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.sosoco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sosoco_app_server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113436413897:subnet/subnet-0cb692e531746cd66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb692e531746cd66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "113436413897",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sosoco_app_server1"
            },
            "tags_all": {
              "Name": "sosoco_app_server1"
            },
            "vpc_id": "vpc-0795d708e5236a230"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "113436413897",
            "id": "subnet-0cb692e531746cd66",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.sosoco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sosoco_app_server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113436413897:subnet/subnet-06cec501e8c041f6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cec501e8c041f6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "113436413897",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sosoco_app_server2"
            },
            "tags_all": {
              "Name": "sosoco_app_server2"
            },
            "vpc_id": "vpc-0795d708e5236a230"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "113436413897",
            "id": "subnet-06cec501e8c041f6f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.sosoco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sosoco_web_server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113436413897:subnet/subnet-069db6cc8598225b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069db6cc8598225b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "113436413897",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sosoco_web_server1"
            },
            "tags_all": {
              "Name": "sosoco_web_server1"
            },
            "vpc_id": "vpc-0795d708e5236a230"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "113436413897",
            "id": "subnet-069db6cc8598225b4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.sosoco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sosoco_web_server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113436413897:subnet/subnet-0837a203e708a459f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0837a203e708a459f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "113436413897",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sosoco_web_server2"
            },
            "tags_all": {
              "Name": "sosoco_web_server2"
            },
            "vpc_id": "vpc-0795d708e5236a230"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "113436413897",
            "id": "subnet-0837a203e708a459f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.sosoco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sosoco_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113436413897:vpc/vpc-0795d708e5236a230",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-050390e20993b3063",
            "default_route_table_id": "rtb-03f22537789d1f162",
            "default_security_group_id": "sg-06bc4b75a1ffddd1a",
            "dhcp_options_id": "dopt-09b2a0bb1e4ae74ec",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0795d708e5236a230",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03f22537789d1f162",
            "owner_id": "113436413897",
            "region": "us-east-1",
            "tags": {
              "Name": "sosoco_vpc"
            },
            "tags_all": {
              "Name": "sosoco_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "113436413897",
            "id": "vpc-0795d708e5236a230",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_outbound_to_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113436413897:security-group-rule/sgr-000c5d4773ccdd512",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-000c5d4773ccdd512",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-06cfb58fbfbab8e79",
            "region": "us-east-1",
            "security_group_id": "sg-094858b6081eca4be",
            "security_group_rule_id": "sgr-000c5d4773ccdd512",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "113436413897",
            "id": "sgr-000c5d4773ccdd512",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_vpc.sosoco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113436413897:security-group-rule/sgr-0c478228d4135c374",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0c478228d4135c374",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-06cfb58fbfbab8e79",
            "security_group_rule_id": "sgr-0c478228d4135c374",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "113436413897",
            "id": "sgr-0c478228d4135c374",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_vpc.sosoco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_outbound_to_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113436413897:security-group-rule/sgr-05f76ba2d2bea085a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-05f76ba2d2bea085a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-094858b6081eca4be",
            "region": "us-east-1",
            "security_group_id": "sg-06cfb58fbfbab8e79",
            "security_group_rule_id": "sgr-05f76ba2d2bea085a",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "113436413897",
            "id": "sgr-05f76ba2d2bea085a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_vpc.sosoco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_inbound_from_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113436413897:security-group-rule/sgr-0dbf5f7c0f5a7abb6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0dbf5f7c0f5a7abb6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-094858b6081eca4be",
            "security_group_rule_id": "sgr-0dbf5f7c0f5a7abb6",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "113436413897",
            "id": "sgr-0dbf5f7c0f5a7abb6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.sosoco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113436413897:security-group-rule/sgr-06c502b02caf19eb0",
            "cidr_ipv4": "75.159.149.84/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-06c502b02caf19eb0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-06cfb58fbfbab8e79",
            "security_group_rule_id": "sgr-06c502b02caf19eb0",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "113436413897",
            "id": "sgr-06c502b02caf19eb0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_vpc.sosoco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_inbound_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113436413897:security-group-rule/sgr-0738a58f0e0685e1f",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0738a58f0e0685e1f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-094858b6081eca4be",
            "region": "us-east-1",
            "security_group_id": "sg-06cfb58fbfbab8e79",
            "security_group_rule_id": "sgr-0738a58f0e0685e1f",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "113436413897",
            "id": "sgr-0738a58f0e0685e1f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_vpc.sosoco_vpc"
          ]
        }
      ]
    }
  ]
}